--- a/large_scale_optimization/lectures.html
+++ b/large_scale_optimization/lectures.html
@@ -26,8 +26,9 @@
 </div>
 <p>These lecture notes will be updated frequently, and may contain typographical or even factual errors.</p>
 <ul>
-<li><p><a href="lectures/grad_descent_unconstrained.pdf">Gradient methods (unconstrained problems)</a> (last updated: 09/05)
-
+<li><p><a href="lectures/grad_descent_unconstrained.pdf">Gradient methods (unconstrained problems)</a> (last updated: 09/05)</p>
+</li>
+<li><p><a href="lectures/grad_descent_constrained.pdf">Gradient methods (constrained problems)</a> (last updated: 09/12)
 
 
 
@@ -42,7 +43,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2023-09-05 09:57:59 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2023-09-12 14:37:34 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
