--- a/large_scale_optimization/lectures.html
+++ b/large_scale_optimization/lectures.html
@@ -28,8 +28,9 @@
 <ul>
 <li><p><a href="lectures/grad_descent_unconstrained.pdf">Gradient methods (unconstrained problems)</a> (last updated: 09/05)</p>
 </li>
-<li><p><a href="lectures/grad_descent_constrained.pdf">Gradient methods (constrained problems)</a> (last updated: 09/12)
-
+<li><p><a href="lectures/grad_descent_constrained.pdf">Gradient methods (constrained problems)</a> (last updated: 09/12)</p>
+</li>
+<li><p><a href="lectures/subgradient_methods.pdf">Subgradient methods</a> (last updated: 9/21)
 
 
 
@@ -43,7 +44,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2023-09-12 14:37:34 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2023-09-21 07:12:01 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
