--- a/Publications_year.html
+++ b/Publications_year.html
@@ -61,14 +61,6 @@ Z. Zhang, <u>Y. Chen</u>,  J. D. Lee, S. S. Du, 2023. <a href="publications/Opti
 G. Li, Y. Wei, <u>Y. Chen</u>, Y. Chi, 2023. <a href="publications/DiffusionSGM.pdf">[paper]</a>
 </p>
 </li>
-<li><p><b>Reward-Agnostic Fine-Tuning: Provable Statistical Benefits of Hybrid Reinforcement Learning</b> <br />
-G. Li, W. Zhan, J. D. Lee, Y. Chi, <u>Y. Chen</u>, 2023. <a href="publications/Policy_finetuning.pdf">[paper]</a>
-</p>
-</li>
-<li><p><b>The Curious Price of Distributional Robustness in Reinforcement Learning with a Generative Model</b> <br />
-L. Shi, G. Li, Y. Wei, <u>Y. Chen</u>, M. Geist, Y. Chi, 2023. <a href="publications/DRO-Simulator.pdf">[paper]</a>
-</p>
-</li>
 <li><p><b>Minimax-Optimal Reward-Agnostic Exploration in Reinforcement Learning</b> <br />
 G. Li, Y. Yan, <u>Y. Chen</u>, J. Fan, 2023. <a href="publications/Reward-free-exploration.pdf">[paper]</a>
 </p>
@@ -77,13 +69,21 @@ G. Li, Y. Yan, <u>Y. Chen</u>, J. Fan, 2023. <a href="publications/Reward-free-e
 Y. Zhou, <u>Y. Chen</u>,  2023 <a href="publications/deflated_heteroPCA.pdf">[paper]</a><a href="slides/Deflated_HeteroPCA_slides.pdf">[slides]</a>
 </p>
 </li>
+<li><p><b>Reward-Agnostic Fine-Tuning: Provable Statistical Benefits of Hybrid Reinforcement Learning</b> <br />
+G. Li, W. Zhan, J. D. Lee, Y. Chi, <u>Y. Chen</u>, <i>Neural Information Processing Systems (NeurIPS)</i>, December 2023. <a href="publications/Policy_finetuning.pdf">[paper]</a>
+</p>
+</li>
+<li><p><b>The Curious Price of Distributional Robustness in Reinforcement Learning with a Generative Model</b> <br />
+L. Shi, G. Li, Y. Wei, <u>Y. Chen</u>, M. Geist, Y. Chi, <i>Neural Information Processing Systems (NeurIPS)</i>, December 2023. <a href="publications/DRO-Simulator.pdf">[paper]</a>
+</p>
+</li>
 <li><p><b>Fast Computation of Optimal Transport via Entropy-Regularized Extragradient Methods</b> <br />
 G. Li, Y. Chen, Y. Chi, H. V. Poor, <u>Y. Chen</u>,  2023 <a href="publications/OT_game.pdf">[paper]</a>
 </p>
 </li>
 <li><p><b>Why MagNet: Quantifying the Complexity of Modeling Power Magnetic Material Characteristics</b> <br />
 D. Serrano, H. Li, S. Wang, T. Guillod, M. Luo, V. Bansal, N. Jha, <u>Y. Chen</u>, C. R. Sullivan, and M. Chen, 
-accepted to <i>IEEE Transactions on Power Electronics</i>, 2023 <a href="https://ieeexplore.ieee.org/document/10169101">[paper]</a>
+<i>IEEE Transactions on Power Electronics</i>, vol. 38, no. 11, pp. 14292-14316, Nov. 2023 <a href="https://ieeexplore.ieee.org/document/10169101">[paper]</a>
 </p>
 </li>
 <li><p><b>How MagNet: Machine Learning Framework for Modeling Power Magnetic Material Characteristics</b> <br />
@@ -297,7 +297,7 @@ G. Li, <u>Y. Chen</u>, Y. Chi, Y. Gu, Y. Wei, <i>Neural Information Processing S
 </ol>
 <div id="footer">
 <div id="footer-text">
-Page generated 2023-09-21 19:36:13 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2023-09-23 20:53:19 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="Publications_year.jemdoc">source</a>)
 </div>
 </div>
