--- a/large_scale_optimization/lectures.html
+++ b/large_scale_optimization/lectures.html
@@ -30,8 +30,9 @@
 </li>
 <li><p><a href="lectures/grad_descent_constrained.pdf">Gradient methods (constrained problems)</a> (last updated: 09/12)</p>
 </li>
-<li><p><a href="lectures/subgradient_methods.pdf">Subgradient methods</a> (last updated: 9/21)
-
+<li><p><a href="lectures/subgradient_methods.pdf">Subgradient methods</a> (last updated: 9/21)</p>
+</li>
+<li><p><a href="lectures/mirror_descent.pdf">Mirror descent</a> (last updated: 10/3)
 
 
 
@@ -44,7 +45,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2023-09-21 07:12:01 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2023-10-03 14:12:49 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
