--- a/large_scale_optimization/lectures.html
+++ b/large_scale_optimization/lectures.html
@@ -32,8 +32,9 @@
 </li>
 <li><p><a href="lectures/subgradient_methods.pdf">Subgradient methods</a> (last updated: 9/21)</p>
 </li>
-<li><p><a href="lectures/mirror_descent.pdf">Mirror descent</a> (last updated: 10/3)
-
+<li><p><a href="lectures/mirror_descent.pdf">Mirror descent</a> (last updated: 10/3)</p>
+</li>
+<li><p><a href="lectures/proximal_gradient.pdf">Proximal gradient methods</a> (last updated: 10/9)
 
 
 
@@ -45,7 +46,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2023-10-03 14:12:49 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2023-10-09 08:08:46 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
