--- a/Publications_year.html
+++ b/Publications_year.html
@@ -106,7 +106,7 @@ G. Li, L. Shi, <u>Y. Chen</u>,  Y. Chi, Y. Wei,  2022. <a href="publications/off
 </p>
 </li>
 <li><p><b>The Efficacy of Pessimism in Asynchronous Q-Learning</b> <br />
-Y. Yan, G. Li, <u>Y. Chen</u>, J. Fan, accepted to <i>IEEE Transactions on Information Theory</i>, 2023. <a href="publications/asyn_Q_pessimism.pdf">[paper]</a>
+Y. Yan, G. Li, <u>Y. Chen</u>, J. Fan, <i>IEEE Transactions on Information Theory</i>, vol. 69, no. 11, pp. 7185 - 7219, Nov. 2023. <a href="publications/asyn_Q_pessimism.pdf">[paper]</a>
 </p>
 </li>
 <li><p><b>Pessimistic Q-Learning for Offline Reinforcement Learning: Towards Optimal Sample Complexity</b> <br />
@@ -297,7 +297,7 @@ G. Li, <u>Y. Chen</u>, Y. Chi, Y. Gu, Y. Wei, <i>Neural Information Processing S
 </ol>
 <div id="footer">
 <div id="footer-text">
-Page generated 2023-10-04 07:30:01 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2023-10-23 20:18:47 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="Publications_year.jemdoc">source</a>)
 </div>
 </div>
