--- a/large_scale_optimization/lectures.html
+++ b/large_scale_optimization/lectures.html
@@ -34,8 +34,9 @@
 </li>
 <li><p><a href="lectures/mirror_descent.pdf">Mirror descent</a> (last updated: 10/3)</p>
 </li>
-<li><p><a href="lectures/proximal_gradient.pdf">Proximal gradient methods</a> (last updated: 10/9)
-
+<li><p><a href="lectures/proximal_gradient.pdf">Proximal gradient methods</a> (last updated: 10/9)</p>
+</li>
+<li><p><a href="lectures/accelerated_gradient.pdf">Accelerated gradient methods</a> (last updated: 10/24)
 
 
 
@@ -46,7 +47,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2023-10-09 08:08:46 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2023-10-24 21:15:37 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
