--- a/Publications_year.html
+++ b/Publications_year.html
@@ -88,7 +88,7 @@ D. Serrano, H. Li, S. Wang, T. Guillod, M. Luo, V. Bansal, N. Jha, <u>Y. Chen</u
 </li>
 <li><p><b>How MagNet: Machine Learning Framework for Modeling Power Magnetic Material Characteristics</b> <br />
 H. Li, D. Serrano, T. Guillod, S. Wang, E. Dogariu, A. Nadler, M. Luo, V. Bansal, N. Jha, <u>Y. Chen</u>, C. R. Sullivan, and M. Chen, 
-accepted to <i>IEEE Transactions on Power Electronics</i>, 2023 <a href="https://ieeexplore.ieee.org/abstract/document/10232863/">[paper]</a></p>
+<i>IEEE Transactions on Power Electronics</i>, vol. 38, no. 12, pp. 15829-15853, Dec. 2023 <a href="https://ieeexplore.ieee.org/abstract/document/10232863/">[paper]</a></p>
 </li>
 </ol>
 <h2>2022</h2>
@@ -297,7 +297,7 @@ G. Li, <u>Y. Chen</u>, Y. Chi, Y. Gu, Y. Wei, <i>Neural Information Processing S
 </ol>
 <div id="footer">
 <div id="footer-text">
-Page generated 2023-10-23 20:18:47 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2023-10-27 21:22:15 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="Publications_year.jemdoc">source</a>)
 </div>
 </div>
