--- a/large_scale_optimization/lectures.html
+++ b/large_scale_optimization/lectures.html
@@ -36,9 +36,10 @@
 </li>
 <li><p><a href="lectures/proximal_gradient.pdf">Proximal gradient methods</a> (last updated: 10/9)</p>
 </li>
-<li><p><a href="lectures/accelerated_gradient.pdf">Accelerated gradient methods</a> (last updated: 10/24)
-
-
+<li><p><a href="lectures/accelerated_gradient.pdf">Accelerated gradient methods</a> (last updated: 10/31)
+</p>
+</li>
+<li><p><a href="lectures/dual_method.pdf">Dual and primal-dual methods</a>  (last updated: 10/31)
 
 
 
@@ -47,7 +48,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2023-10-24 21:15:37 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2023-10-31 09:09:37 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
