--- a/large_scale_optimization/lectures.html
+++ b/large_scale_optimization/lectures.html
@@ -36,8 +36,9 @@
 </li>
 <li><p><a href="lectures/proximal_gradient.pdf">Proximal gradient methods</a> (last updated: 10/9)</p>
 </li>
-<li><p><a href="lectures/accelerated_gradient.pdf">Accelerated gradient methods</a> (last updated: 10/31)
-</p>
+<li><p><a href="lectures/accelerated_gradient.pdf">Accelerated gradient methods</a> (last updated: 10/31)</p>
+</li>
+<li><p><a href="lectures/smoothing.pdf">Smoothing for nonsmooth optimization</a> (last updated: 11/5)</p>
 </li>
 <li><p><a href="lectures/dual_method.pdf">Dual and primal-dual methods</a>  (last updated: 10/31)
 
@@ -48,7 +49,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2023-10-31 09:09:37 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2023-11-05 15:27:32 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
