--- a/large_scale_optimization/lectures.html
+++ b/large_scale_optimization/lectures.html
@@ -40,16 +40,18 @@
 </li>
 <li><p><a href="lectures/smoothing.pdf">Smoothing for nonsmooth optimization</a> (last updated: 11/5)</p>
 </li>
-<li><p><a href="lectures/dual_method.pdf">Dual and primal-dual methods</a>  (last updated: 10/31)
-
-
+<li><p><a href="lectures/dual_method.pdf">Dual and primal-dual methods</a>  (last updated: 11/6)</p>
+</li>
+<li><p><a href="lectures/ADMM.pdf">Alternating direction method of multipliers (ADMM)</a> (last updated: 11/6)
 
 </p>
+</li>
+<li><p><a href="lectures/quasi_Newton.pdf">Quasi-Newton methods</a> (last updated: 11/6)</p>
 </li>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2023-11-05 15:27:32 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2023-11-06 14:47:18 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
