--- a/Teaching.html
+++ b/Teaching.html
@@ -83,7 +83,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2023-10-27 21:22:15 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2023-11-06 21:12:28 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="Teaching.jemdoc">source</a>)
 </div>
 </div>
