--- a/Publications_year.html
+++ b/Publications_year.html
@@ -53,8 +53,16 @@
 
 <h2>2023</h2>
 <ol>
+<li><p><b>Heteroskedastic Tensor Clustering</b> <br />
+Y. Zhou, <u>Y. Chen</u>,  2023 <a href="publications/tensor_clustering.pdf">[paper]</a>
+</p>
+</li>
 <li><p><b>Settling the Sample Complexity of Online Reinforcement Learning</b> <br />
 Z. Zhang, <u>Y. Chen</u>,  J. D. Lee, S. S. Du, 2023. <a href="publications/Optimal-OnlineRL.pdf">[paper]</a>
+</p>
+</li>
+<li><p><b>Federated Natural Policy Gradient Methods for Multi-task Reinforcement Learning</b> <br />
+T. Yang, S. Cen, Y. Wei, <u>Y. Chen</u>, Y. Chi, 2023 <a href="publications/Federated_multitask_RL.pdf">[paper]</a>
 </p>
 </li>
 <li><p><b>Towards Faster Non-Asymptotic Convergence for Diffusion-Based Generative Models</b> <br />
@@ -297,7 +305,7 @@ G. Li, <u>Y. Chen</u>, Y. Chi, Y. Gu, Y. Wei, <i>Neural Information Processing S
 </ol>
 <div id="footer">
 <div id="footer-text">
-Page generated 2023-10-27 21:22:15 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2023-11-06 21:12:28 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="Publications_year.jemdoc">source</a>)
 </div>
 </div>
