--- a/large_scale_optimization/lectures.html
+++ b/large_scale_optimization/lectures.html
@@ -42,16 +42,18 @@
 </li>
 <li><p><a href="lectures/dual_method.pdf">Dual and primal-dual methods</a>  (last updated: 11/6)</p>
 </li>
-<li><p><a href="lectures/ADMM.pdf">Alternating direction method of multipliers (ADMM)</a> (last updated: 11/6)
-
-</p>
+<li><p><a href="lectures/ADMM.pdf">Alternating direction method of multipliers (ADMM)</a> (last updated: 11/6)</p>
+</li>
+<li><p><a href="lectures/stochastic_gradient.pdf">Stochastic gradient methods</a> (last updated: 11/16)</p>
+</li>
+<li><p><a href="lectures/variance_reduction.pdf">Variance reduction for stochastic optimization</a> (last updated: 11/16)</p>
 </li>
 <li><p><a href="lectures/quasi_Newton.pdf">Quasi-Newton methods</a> (last updated: 11/6)</p>
 </li>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2023-11-06 14:47:18 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2023-11-16 15:01:18 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
