--- a/Publications_year.html
+++ b/Publications_year.html
@@ -101,16 +101,16 @@ H. Li, D. Serrano, T. Guillod, S. Wang, E. Dogariu, A. Nadler, M. Luo, V. Bansal
 </ol>
 <h2>2022</h2>
 <ol>
+<li><p><b>Settling the Sample Complexity of Model-Based Offline Reinforcement Learning</b> <br />
+G. Li, L. Shi, <u>Y. Chen</u>,  Y. Chi, Y. Wei,  accepted to <i>Annals of Statistics</i>,  2023+. <a href="publications/offline_modelbased.pdf">[paper]</a>
+</p>
+</li>
 <li><p><b>Minimax-Optimal Multi-Agent RL in Markov Games With a Generative Model</b> <br />
 G. Li, Y. Chi, Y. Wei, <u>Y. Chen</u>,  <i>Neural Information Processing Systems (NeurIPS)</i>, December 2022 <b>(selected as oral)</b>. <a href="publications/Markov_games_simulator.pdf">[paper]</a>
 </p>
 </li>
 <li><p><b>Model-Based Reinforcement Learning Is Minimax-Optimal for Offline Zero-Sum Markov Games</b> <br />
 Y. Yan, G. Li, <u>Y. Chen</u>, J. Fan, 2022. <a href="publications/model_based_offline_game.pdf">[paper]</a>
-</p>
-</li>
-<li><p><b>Settling the Sample Complexity of Model-Based Offline Reinforcement Learning</b> <br />
-G. Li, L. Shi, <u>Y. Chen</u>,  Y. Chi, Y. Wei,  2022. <a href="publications/offline_modelbased.pdf">[paper]</a>
 </p>
 </li>
 <li><p><b>The Efficacy of Pessimism in Asynchronous Q-Learning</b> <br />
@@ -305,7 +305,7 @@ G. Li, <u>Y. Chen</u>, Y. Chi, Y. Gu, Y. Wei, <i>Neural Information Processing S
 </ol>
 <div id="footer">
 <div id="footer-text">
-Page generated 2023-11-07 08:22:00 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2023-11-26 19:54:56 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="Publications_year.jemdoc">source</a>)
 </div>
 </div>
