--- a/index.html
+++ b/index.html
@@ -105,10 +105,10 @@ Prior to this, I was a postdoc in Statistics at Stanford University from 2015 to
 <li><p>G. Li, Y. Yan, <u>Y. Chen</u>, J. Fan, <a href="publications/Reward-free-exploration.pdf">&ldquo;Minimax-optimal reward-agnostic exploration in reinforcement learning,&rdquo;</a> 2023. 
 </p>
 </li>
-<li><p>G. Li, Y. Chi, Y. Wei, <u>Y. Chen</u>, <a href="publications/Markov_games_simulator.pdf">&ldquo;Minimax-optimal multi-agent RL in Markov games with a generative model,&rdquo;</a> NeurIPS 2022 <b>(selected as oral)</b>. 
+<li><p>G. Li, L. Shi, <u>Y. Chen</u>, Y. Chi, Y. Wei,   <a href="publications/offline_modelbased.pdf">&ldquo;Settling the sample complexity of model-based offline reinforcement learning,&rdquo;</a> accepted to <i>Annals of Statistics</i>, 2023+.
 </p>
 </li>
-<li><p>G. Li, L. Shi, <u>Y. Chen</u>, Y. Chi, Y. Wei,   <a href="publications/offline_modelbased.pdf">&ldquo;Settling the sample complexity of model-based offline reinforcement learning,&rdquo;</a> 2022.
+<li><p>G. Li, Y. Chi, Y. Wei, <u>Y. Chen</u>, <a href="publications/Markov_games_simulator.pdf">&ldquo;Minimax-optimal multi-agent RL in Markov games with a generative model,&rdquo;</a> NeurIPS 2022 <b>(selected as oral)</b>. 
 </p>
 </li>
 <li><p>G. Li, Y. Wei, Y. Chi,  <u>Y. Chen</u>,  <a href="publications/SoftmaxPG_LB.pdf">&ldquo;Softmax policy gradient methods can take exponential time to converge,&rdquo;</a> <i>Mathematical Programming</i>, vol. 201, pp. 707-802, 2023 (appeared in part to COLT 2021). <a href="publications/SoftmaxPG_LB.pdf">[ArXiv]</a><a href="https://link.springer.com/article/10.1007/s10107-022-01920-6">[MP version]</a><a href="slides/Softmax_Lower_Bound_slides.pdf">[slides]</a>
@@ -188,7 +188,7 @@ Prior to this, I was a postdoc in Statistics at Stanford University from 2015 to
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2023-11-26 19:54:55 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2023-11-26 20:25:25 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="index.jemdoc">source</a>)
 </div>
 </div>
