--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@ Prior to this, I was a postdoc in Statistics at Stanford University from 2015 to
 </td></tr></table>
 
 <h2>Openings</h2>
-<p>I'm looking for highly motivated postdocs and Ph. D. students with strong mathematical background and interest in machine learning theory (particularly reinforcement learning),   statistics, and optimization. </p>
+<p>I'm looking for highly motivated postdocs and Ph. D. students with strong mathematical background and interest in machine learning theory (particularly reinforcement learning, diffusion models, and LLM),   statistics, and optimization. </p>
 <h2>Recent news</h2>
 
 <table class="imgtable"><tr><td>
@@ -188,7 +188,7 @@ Prior to this, I was a postdoc in Statistics at Stanford University from 2015 to
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2023-11-26 20:25:25 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2023-11-26 20:45:48 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="index.jemdoc">source</a>)
 </div>
 </div>
