--- a/large_scale_optimization/lectures.html
+++ b/large_scale_optimization/lectures.html
@@ -50,10 +50,12 @@
 </li>
 <li><p><a href="lectures/quasi_Newton.pdf">Quasi-Newton methods</a> (last updated: 11/6)</p>
 </li>
+<li><p>Nonconvex optimization for statistical estimation <a href="lectures/nonconvex_part_i.pdf">(Part 1)</a><a href="lectures/nonconvex_part_ii.pdf">(Part 2)</a> (last updated: 11/30)</p>
+</li>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2023-11-16 15:01:18 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2023-11-30 14:33:47 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
