--- a/Publications_year.html
+++ b/Publications_year.html
@@ -53,6 +53,10 @@
 
 <h2>2023</h2>
 <ol>
+<li><p><b>Optimal Multi-Distribution Learning</b> <br />
+Z. Zhang, W. Zhan, <u>Y. Chen</u>, S. S. Du,  J. D. Lee, 2023. <a href="https://arxiv.org/abs/2312.05134">[paper]</a>
+</p>
+</li>
 <li><p><b>Heteroskedastic Tensor Clustering</b> <br />
 Y. Zhou, <u>Y. Chen</u>,  2023 <a href="publications/tensor_clustering.pdf">[paper]</a>
 </p>
@@ -305,7 +309,7 @@ G. Li, <u>Y. Chen</u>, Y. Chi, Y. Gu, Y. Wei, <i>Neural Information Processing S
 </ol>
 <div id="footer">
 <div id="footer-text">
-Page generated 2023-11-26 21:01:36 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2023-12-10 21:33:29 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="Publications_year.jemdoc">source</a>)
 </div>
 </div>
