--- a/index.html
+++ b/index.html
@@ -96,6 +96,9 @@ Prior to this, I was a postdoc in Statistics at Stanford University from 2015 to
 <li><p><b>Machine learning theory</b>
 </p>
 <ul>
+<li><p>Z. Zhang, W. Zhan, <u>Y. Chen</u>, S. S. Du, J. D. Lee, <a href="https://arxiv.org/abs/2312.05134">&ldquo;Optimal multi-distribution learning,&rdquo;</a> 2023.
+</p>
+</li>
 <li><p>Z. Zhang, <u>Y. Chen</u>,  J. D. Lee, S. S. Du, <a href="publications/Optimal-OnlineRL.pdf">&ldquo;Settling the sample complexity of online reinforcement learning,&rdquo;</a> 2023. 
 </p>
 </li>
@@ -188,7 +191,7 @@ Prior to this, I was a postdoc in Statistics at Stanford University from 2015 to
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2023-11-26 21:01:36 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2023-12-10 21:33:29 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="index.jemdoc">source</a>)
 </div>
 </div>
