--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@ Prior to this, I was a postdoc in Statistics at Stanford University from 2015 to
 <li><p>Z. Zhang, <u>Y. Chen</u>,  J. D. Lee, S. S. Du, <a href="publications/Optimal-OnlineRL.pdf">&ldquo;Settling the sample complexity of online reinforcement learning,&rdquo;</a> 2023. 
 </p>
 </li>
-<li><p>G. Li, Y. Wei, <u>Y. Chen</u>, Y. Chi, <a href="publications/DiffusionSGM.pdf">&ldquo;Towards faster non-asymptotic convergence for diffusion-based generative models,&rdquo;</a> 2023. 
+<li><p>G. Li, Y. Wei, <u>Y. Chen</u>, Y. Chi, <a href="publications/DiffusionSGM.pdf">&ldquo;Towards faster non-asymptotic convergence for diffusion-based generative models,&rdquo;</a> 2023 (accepted in part to ICLR 2024). 
 </p>
 </li>
 <li><p>G. Li, Y. Yan, <u>Y. Chen</u>, J. Fan, <a href="publications/Reward-free-exploration.pdf">&ldquo;Minimax-optimal reward-agnostic exploration in reinforcement learning,&rdquo;</a> 2023. 
@@ -191,7 +191,7 @@ Prior to this, I was a postdoc in Statistics at Stanford University from 2015 to
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2023-12-10 21:33:29 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2024-01-16 08:34:20 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="index.jemdoc">source</a>)
 </div>
 </div>
