--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@ Prior to this, I was a postdoc in Statistics at Stanford University from 2015 to
 <img src="images/spectral-methods-FnT.jpeg" alt="alt text" width="140 px" height="IMGLINKTARGET" />&nbsp;</td>
 <td align="left"><p>
 <ul>
-    <li><a href="https://yulingy.github.io/"> Yuling Yan</a> received the 2024 IMS Lawrence D. Brown Ph. D. Student Award. Congrats, Yuling! </li>
+    <li><a href="https://yulingy.github.io/"> Yuling Yan</a> received the IMS Lawrence D. Brown Ph. D. Student Award and the ICCM Best Thesis Award (silver medal). Congrats, Yuling! </li>
 </ul>
 <ul>
     <li><a href="https://cxcai.github.io/"> Changxiao Cai</a> has joined University of Michigan-Ann Arbor as an Assistant Professor of Industrial and Operations Engineering. Congrats, Changxiao! </li>
@@ -191,7 +191,7 @@ Prior to this, I was a postdoc in Statistics at Stanford University from 2015 to
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-01-16 08:34:20 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2024-01-17 16:48:00 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="index.jemdoc">source</a>)
 </div>
 </div>
