--- a/Publications_year.html
+++ b/Publications_year.html
@@ -174,9 +174,11 @@ G. Li, <u>Y. Chen</u>, Y. Chi, Y. Gu, Y. Wei, <i>Neural Information Processing S
 <li><p><b>Convex and Nonconvex Optimization Are Both Minimax-Optimal for Noisy Blind Deconvolution under Random Designs</b> <br /> <u>Y. Chen</u>, J. Fan, B. Wang, Y. Yan, <i>Journal of the American Statistical Association</i>, vol. 118, no. 542, pp. 858-868, 2023. <a href="publications/BD_noise.pdf">[paper]</a>
 </p>
 </li>
-<li><p><b>Fast Global Convergence of Natural Policy Gradient Methods with Entropy Regularization</b> <br />  S. Cen, C. Cheng, <u>Y. Chen</u>, Y. Wei, Y. Chi, <i>Operations Research</i>, vol. 70, no. 4, pp. 2563–2578, 2022 <b>(INFORMS George Nicholson award finalist, 2021)</b>. <a href="publications/NPG_reg.pdf">[paper]</a><a href="https://pubsonline.informs.org/doi/epdf/10.1287/opre.2021.2151">[OR version]</a><a href="slides/EntropyNPG_slides.pdf">[slides]</a>
-</p>
+<li><p><b>Fast Global Convergence of Natural Policy Gradient Methods with Entropy Regularization</b> <br />  S. Cen, C. Cheng, <u>Y. Chen</u>, Y. Wei, Y. Chi, <i>Operations Research</i>, vol. 70, no. 4, pp. 2563–2578, 2022. <a href="publications/NPG_reg.pdf">[paper]</a><a href="https://pubsonline.informs.org/doi/epdf/10.1287/opre.2021.2151">[OR version]</a><a href="slides/EntropyNPG_slides.pdf">[slides]</a>
+<br /> &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&#8201;&mdash;&#8201;<b>INFORMS George Nicholson award finalist</b></p>
 </li>
+</ol>
+<ol>
 <li><p><b>Sample Complexity of Asynchronous Q-Learning: Sharper Analysis and Variance Reduction</b> <br />  G. Li, Y. Wei, Y. Chi, Y. Gu, <u>Y. Chen</u>, <i>IEEE Transactions on Information Theory</i>, vol. 68, no. 1, pp. 448-473, Jan. 2022. <a href="publications/AsynQlearning.pdf">[paper]</a><a href="slides/Async_Qlearning_slides.pdf">[slides]</a>
 <br /> &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&#8201;&mdash;&#8201;appeared in part in <a href="publications/AsynQlearning_NeurIPS.pdf">NeurIPS 2020</a>
 </p>
@@ -229,6 +231,7 @@ G. Li, <u>Y. Chen</u>, Y. Chi, Y. Gu, Y. Wei, <i>Neural Information Processing S
 <h2>2017</h2>
 <ol>
 <li><p><b>Implicit Regularization in Nonconvex Statistical Estimation:<br /> Gradient Descent Converges Linearly for Phase Retrieval, Matrix Completion, and Blind Deconvolution</b>  <br />  C. Ma, K. Wang, Y. Chi, <u>Y. Chen</u>, <i>Foundations of Computational Mathematics</i>, vol. 20, no. 3, pp. 451-632, June 2020.  <a href="https://link.springer.com/content/pdf/10.1007%2Fs10208-019-09429-9.pdf">[FoCM version]</a><a href="publications/ImplicitReg_main.pdf">[main text]</a><a href="publications/ImplicitReg_supp.pdf">[supplement]</a><a href="publications/ImplicitReg.pdf">[Arxiv]</a><a href="slides/implicit_reg_slides.pdf">[slides]</a>
+<br /> &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&#8201;&mdash;&#8201;<b>SIAM Activity Group on Imaging Science Best Paper Prize</b>
 <br /> &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&#8201;&mdash;&#8201;appeared in part in <a href="publications/ImplicitReg_ICML.pdf">ICML 2018</a> 
 </p>
 </li>
@@ -253,6 +256,8 @@ G. Li, <u>Y. Chen</u>, Y. Chi, Y. Gu, Y. Wei, <i>Neural Information Processing S
 <h2>2015 </h2>
 <ol>
 <li><p><b>Solving Random Quadratic Systems of Equations Is Nearly as Easy as Solving Linear Systems</b>  <br />  <u>Y. Chen</u> and E. J. Candes, <i>Communications on Pure and Applied Mathematics</i>, vol. 70, issue 5, pp. 822 - 883, May 2017.  <a href="publications/TruncatedWF_CPAM.pdf">[paper]</a><a href="publications/TWF_NIPS.pdf">[NIPS version]</a><a href="publications/supplement_TWF.pdf">[supplement]</a><a href="TWF/">[webpage and code]</a><a href="slides//TWF_slides.pdf">[slides]</a>
+<br /> &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&#8201;&mdash;&#8201;<b>ICCM Best Paper Award (Gold Medal)</b>
+<br /> &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&#8201;&mdash;&#8201;<b>Finalist, Best Paper Prize for Young Researchers in Continuous Optimization</b>
 <br /> &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&#8201;&mdash;&#8201;appeared in part in <a href="publications/TWF_NIPS.pdf">NIPS 2015</a> <b>(oral)</b>
 </p>
 </li>
@@ -310,7 +315,7 @@ G. Li, <u>Y. Chen</u>, Y. Chi, Y. Gu, Y. Wei, <i>Neural Information Processing S
 </ol>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-01-17 16:48:01 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2024-01-19 08:03:44 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="Publications_year.jemdoc">source</a>)
 </div>
 </div>
