--- a/index.html
+++ b/index.html
@@ -61,6 +61,10 @@ Prior to this, I was a postdoc in Statistics at Stanford University from 2015 to
 <img src="images/spectral-methods-FnT.jpeg" alt="alt text" width="140 px" height="IMGLINKTARGET" />&nbsp;</td>
 <td align="left"><p>
 <ul>
+    <li><a href="https://link.springer.com/content/pdf/10.1007%2Fs10208-019-09429-9.pdf"> Our paper</a> on implicit regularization in nonconvex statistical estimation
+ received the <a href="https://www.siam.org/prizes-recognition/activity-group-prizes/detail/siag-imaging-science-best-paper-prize"> SIAM Activity Group on Imaging Science Best Paper Prize</a>. </li>
+</ul>
+<ul>
     <li><a href="https://yulingy.github.io/"> Yuling Yan</a> received the IMS Lawrence D. Brown Ph. D. Student Award and the ICCM Best Thesis Award (silver medal). Congrats, Yuling! </li>
 </ul>
 <ul>
@@ -152,12 +156,13 @@ Prior to this, I was a postdoc in Statistics at Stanford University from 2015 to
 <li><p><u>Y. Chen</u>, Y. Chi, J. Fan, C. Ma, <a href="https://link.springer.com/article/10.1007/s10107-019-01363-6">&ldquo;Gradient descent with random initialization: Fast global convergence for nonconvex phase retrieval,&rdquo;</a> <i>Mathematical Programming</i>, vol. 176, no. 1-2, pp. 5-37, July 2019.   <a href="publications/random_init_PR.pdf">[ArXiv]</a><a href="slides/random_init_slides.pdf">[slides]</a>
 </p>
 </li>
-<li><p>C. Ma, K. Wang, Y. Chi, <u>Y. Chen</u>, <a href="https://link.springer.com/content/pdf/10.1007%2Fs10208-019-09429-9.pdf">&ldquo;Implicit regularization in nonconvex statistical estimation: Gradient descent converges linearly for phase retrieval, matrix completion, and blind deconvolution,&rdquo;</a> <i>Foundations of Computational Mathematics</i>, vol. 20, no. 3, pp. 451-632, June 2020 (appeared in part in ICML 2018).  <a href="publications/ImplicitReg_main.pdf">[main text]</a><a href="publications/ImplicitReg_supp.pdf">[supplement]</a><a href="publications/ImplicitReg.pdf">[full paper (Arxiv)]</a><a href="slides/implicit_reg_slides.pdf">[slides]</a>
+<li><p>C. Ma, K. Wang, Y. Chi, <u>Y. Chen</u>, <a href="https://link.springer.com/content/pdf/10.1007%2Fs10208-019-09429-9.pdf">&ldquo;Implicit regularization in nonconvex statistical estimation: Gradient descent converges linearly for phase retrieval, matrix completion, and blind deconvolution,&rdquo;</a> <i>Foundations of Computational Mathematics</i>, vol. 20, no. 3, pp. 451-632, June 2020 
+<b>(SIAM Activity Group on Imaging Science Best Paper Prize)</b>.  <a href="publications/ImplicitReg_main.pdf">[main text]</a><a href="publications/ImplicitReg_supp.pdf">[supplement]</a><a href="publications/ImplicitReg.pdf">[full paper (Arxiv)]</a><a href="slides/implicit_reg_slides.pdf">[slides]</a>
 
 
 </p>
 </li>
-<li><p><u>Y. Chen</u> and E. J. Candes, <a href="publications/TruncatedWF_CPAM.pdf">&ldquo;Solving random quadratic systems of equations is nearly as easy as solving linear systems,&rdquo;</a> <i>Communications on Pure and Applied Mathematics</i>, vol. 70, issue 5, pp. 822-883, May 2017. <a href="slides/TWF_slides.pdf">[slides]</a><a href="http://princeton.edu/~yc5/TWF/">[website]</a></p>
+<li><p><u>Y. Chen</u> and E. J. Candes, <a href="publications/TruncatedWF_CPAM.pdf">&ldquo;Solving random quadratic systems of equations is nearly as easy as solving linear systems,&rdquo;</a> <i>Communications on Pure and Applied Mathematics</i>, vol. 70, issue 5, pp. 822-883, May 2017 <b>(ICCM Best Paper Award (Gold Medal), and Finalist for Best Paper Prize for Young Researchers in Continuous Optimization)</b>. <a href="slides/TWF_slides.pdf">[slides]</a><a href="http://princeton.edu/~yc5/TWF/">[website]</a></p>
 </li>
 </ul>
 
@@ -191,7 +196,7 @@ Prior to this, I was a postdoc in Statistics at Stanford University from 2015 to
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-01-17 16:48:00 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2024-01-19 08:03:43 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="index.jemdoc">source</a>)
 </div>
 </div>
