--- a/Publications_year.html
+++ b/Publications_year.html
@@ -137,7 +137,7 @@ H. Li, D. Serrano, T. Guillod, E. Dogariu, A. Nadler, S. Wang, M. Luo, V. Bansal
 <br /> &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&#8201;&mdash;&#8201;appeared in part in <a href="publications/SoftmaxPG_LB_COLT.pdf">COLT 2021</a> 
 </p>
 </li>
-<li><p><b>Is Q-Learning Minimax Optimal? A Tight Sample Complexity Analysis</b> <br />  G. Li, C. Cai, <u>Y. Chen</u>, Y. Wei, Y. Chi,  <i>Operations Research</i>,  vol. 72, no. 1, pp. 203-221, 2024. <a href="publications/SyncQlearning.pdf">[paper]</a>
+<li><p><b>Is Q-Learning Minimax Optimal? A Tight Sample Complexity Analysis</b> <br />  G. Li, C. Cai, <u>Y. Chen</u>, Y. Wei, Y. Chi,  <i>Operations Research</i>,  vol. 72, no. 1, pp. 203-221, 2024. <a href="publications/SyncQlearning.pdf">[paper]</a><a href="https://pubsonline.informs.org/doi/epdf/10.1287/opre.2023.2450">[OR version]</a>
 <br /> &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&#8201;&mdash;&#8201;appeared in part in <a href="publications/SyncQlearning_ICML.pdf">ICML 2021</a> 
 </p>
 </li>
@@ -164,7 +164,7 @@ G. Li, <u>Y. Chen</u>, Y. Chi, Y. Gu, Y. Wei, <i>Neural Information Processing S
 </ol>
 <h2>2020</h2>
 <ol>
-<li><p><b>Breaking the Sample Size Barrier in Model-Based Reinforcement Learning with a Generative Model</b> <br />  G. Li, Y. Wei, Y. Chi,  <u>Y. Chen</u>, <i>Operations Research</i>,  vol. 72, no. 1, pp. 222-236, 2024. <a href="publications/model_based_RL.pdf">[paper]</a><a href="http://www.stat.cmu.edu/~ytwei/documents/slides/model-based-rl-slides.pdf">[slides]</a>
+<li><p><b>Breaking the Sample Size Barrier in Model-Based Reinforcement Learning with a Generative Model</b> <br />  G. Li, Y. Wei, Y. Chi,  <u>Y. Chen</u>, <i>Operations Research</i>,  vol. 72, no. 1, pp. 222-236, 2024. <a href="publications/model_based_RL.pdf">[paper]</a><a href="https://pubsonline.informs.org/doi/epdf/10.1287/opre.2023.2451">[OR version]</a><a href="http://www.stat.cmu.edu/~ytwei/documents/slides/model-based-rl-slides.pdf">[slides]</a>
 <br /> &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&#8201;&mdash;&#8201;appeared in part in <a href="publications/model_base_RL_neurips.pdf">NeurIPS 2020</a>
 </p>
 </li>
@@ -315,7 +315,7 @@ G. Li, <u>Y. Chen</u>, Y. Chi, Y. Gu, Y. Wei, <i>Neural Information Processing S
 </ol>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-01-27 09:16:56 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2024-01-27 19:31:08 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="Publications_year.jemdoc">source</a>)
 </div>
 </div>
