--- a/index.html
+++ b/index.html
@@ -121,13 +121,13 @@ Prior to this, I was a postdoc in Statistics at Stanford University from 2015 to
 <li><p>G. Li, Y. Wei, Y. Chi,  <u>Y. Chen</u>,  <a href="publications/SoftmaxPG_LB.pdf">&ldquo;Softmax policy gradient methods can take exponential time to converge,&rdquo;</a> <i>Mathematical Programming</i>, vol. 201, pp. 707-802, 2023 (appeared in part to COLT 2021). <a href="publications/SoftmaxPG_LB.pdf">[ArXiv]</a><a href="https://link.springer.com/article/10.1007/s10107-022-01920-6">[MP version]</a><a href="slides/Softmax_Lower_Bound_slides.pdf">[slides]</a>
 </p>
 </li>
-<li><p>G. Li, C. Cai, <u>Y. Chen</u>, Y. Wei, Y. Chi, <a href="publications/SyncQlearning.pdf">&ldquo;Is Q-Learning minimax optimal? A tight sample complexity analysis,&rdquo;</a> <i>Operations Research</i>, vol. 72, no. 1, pp. 203-221, 2024 (appeared in part to ICML 2021).  
+<li><p>G. Li, C. Cai, <u>Y. Chen</u>, Y. Wei, Y. Chi, <a href="publications/SyncQlearning.pdf">&ldquo;Is Q-Learning minimax optimal? A tight sample complexity analysis,&rdquo;</a> <i>Operations Research</i>, vol. 72, no. 1, pp. 203-221, 2024 (appeared in part to ICML 2021).  <a href="publications/SyncQlearning.pdf">[paper]</a><a href="https://pubsonline.informs.org/doi/epdf/10.1287/opre.2023.2450">[OR version]</a>
 </p>
 </li>
 <li><p>S. Cen, C. Cheng, <u>Y. Chen</u>, Y. Wei, Y. Chi,  <a href="publications/NPG_reg.pdf">&ldquo;Fast global convergence of natural policy gradient methods with entropy regularization,&rdquo;</a> <i>Operations Research</i>, vol. 70, no. 4, pp. 2563–2578,  2022 <b>(INFORMS George Nicholson award finalist, 2021)</b>. <a href="publications/NPG_reg.pdf">[ArXiv]</a><a href="https://pubsonline.informs.org/doi/epdf/10.1287/opre.2021.2151">[OR version]</a><a href="slides/EntropyNPG_slides.pdf">[slides]</a>
 </p>
 </li>
-<li><p>G. Li, Y. Wei, Y. Chi, <u>Y. Chen</u>, <a href="publications/model_based_RL.pdf">&ldquo;Breaking the sample size barrier in model-based reinforcement learning with a generative model,&rdquo;</a> <i>Operations Research</i>, vol. 72, no. 1, pp. 222-236, 2024 (appeared in part to NeurIPS 2020). <a href="publications/model_based_RL.pdf">[paper]</a><a href="http://www.stat.cmu.edu/~ytwei/documents/slides/model-based-rl-slides.pdf">[slides]</a></p>
+<li><p>G. Li, Y. Wei, Y. Chi, <u>Y. Chen</u>, <a href="publications/model_based_RL.pdf">&ldquo;Breaking the sample size barrier in model-based reinforcement learning with a generative model,&rdquo;</a> <i>Operations Research</i>, vol. 72, no. 1, pp. 222-236, 2024 (appeared in part to NeurIPS 2020). <a href="publications/model_based_RL.pdf">[paper]</a><a href="https://pubsonline.informs.org/doi/epdf/10.1287/opre.2023.2451">[OR version]</a><a href="http://www.stat.cmu.edu/~ytwei/documents/slides/model-based-rl-slides.pdf">[slides]</a></p>
 </li>
 </ul>
 
@@ -196,7 +196,7 @@ Prior to this, I was a postdoc in Statistics at Stanford University from 2015 to
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-01-27 09:16:56 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2024-01-27 19:31:08 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="index.jemdoc">source</a>)
 </div>
 </div>
