--- a/Group.html
+++ b/Group.html
@@ -35,7 +35,7 @@
 <h1>PhD students and postdocs </h1>
 <h2>Current &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp</h2>
 <ul>
-<li><p><a href="https://jagterberg.github.io/">Joshua Agterberg</a> (Postdoc, co-advised with Rene Vidal)
+<li><p><a href="https://jagterberg.github.io/">Joshua Agterberg</a> (Postdoc, co-advised with Rene Vidal; Incoming Faculty, Department of Statistics, University of Illinois Urbana-Champaign)
 </p>
 </li>
 <li><p><a href="https://scholar.google.com/citations?user=K59VclwAAAAJ&amp;hl=en">Hong Hu</a> (Postdoc, co-advised with Yuting Wei)</p>
@@ -71,7 +71,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-01-27 19:31:08 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2024-01-27 19:35:03 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="Group.jemdoc">source</a>)
 </div>
 </div>
