--- a/Group.html
+++ b/Group.html
@@ -66,12 +66,12 @@
 </li>
 <li><p><a href="https://sites.google.com/site/pyangece/">Pengkun Yang</a>  (Faculty, Center for Statistical Science, Tsinghua University)</p>
 </li>
-<li><p><a href="https://scholar.princeton.edu/qyu/">Qian Yu</a> (Faculty, Department of Electrical and Computer Engineering, University of California, Santa Barbara) </p>
+<li><p><a href="https://live-sil-ece-ucsb-edu-v01.pantheonsite.io/">Qian Yu</a> (Faculty, Department of Electrical and Computer Engineering, University of California, Santa Barbara) </p>
 </li>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-01-27 19:36:09 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2024-02-09 22:04:05 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="Group.jemdoc">source</a>)
 </div>
 </div>
