--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@ Prior to this, I was a postdoc in Statistics at Stanford University from 2015 to
     <li><a href="https://yulingy.github.io/"> Yuling Yan</a> will join University of Wisconsin-Madison as an Assistant Professor of Statistics in Fall 2024, after being a Norbert Wiener postdoc at MIT (advised by P. Rigollet and M. Wainwright). Congrats, Yuling! </li>
 </ul>
 <ul>
-    <li><a href="https://scholar.princeton.edu/qyu/"> Qian Yu</a> has joined UCSB as an Assistant Professor of Electrical and Computer Engineering. Congrats, Qian! </li>
+    <li><a href="https://live-sil-ece-ucsb-edu-v01.pantheonsite.io/"> Qian Yu</a> has joined UCSB as an Assistant Professor of Electrical and Computer Engineering. Congrats, Qian! </li>
 </ul>
 <ul>
     <li>Our new monograph <a href="publications/SpectralMethods.pdf"> "Spectral Methods for Data Science: A Statistical Perspective" </a> is published in <a href="https://www.nowpublishers.com/article/Details/MAL-079"><i> Foundations and Trends in Machine Learning</i></a>. See <a href="slides/spectral_method_slides.pdf"> slides </a> for PKU summer school on theoretical statistics.  </li>
@@ -196,7 +196,7 @@ Prior to this, I was a postdoc in Statistics at Stanford University from 2015 to
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-01-27 19:36:09 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2024-02-09 22:04:04 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="index.jemdoc">source</a>)
 </div>
 </div>
