--- a/Publications_year.html
+++ b/Publications_year.html
@@ -107,7 +107,7 @@ H. Li, D. Serrano, T. Guillod, S. Wang, E. Dogariu, A. Nadler, M. Luo, V. Bansal
 <h2>2022</h2>
 <ol>
 <li><p><b>Settling the Sample Complexity of Model-Based Offline Reinforcement Learning</b> <br />
-G. Li, L. Shi, <u>Y. Chen</u>,  Y. Chi, Y. Wei,  accepted to <i>Annals of Statistics</i>,  2023+. <a href="publications/offline_modelbased.pdf">[paper]</a>
+G. Li, L. Shi, <u>Y. Chen</u>,  Y. Chi, Y. Wei,  accepted to <i>Annals of Statistics</i>,  2024+. <a href="publications/offline_modelbased.pdf">[paper]</a>
 </p>
 </li>
 <li><p><b>Minimax-Optimal Multi-Agent RL in Markov Games With a Generative Model</b> <br />
@@ -115,7 +115,7 @@ G. Li, Y. Chi, Y. Wei, <u>Y. Chen</u>,  <i>Neural Information Processing Systems
 </p>
 </li>
 <li><p><b>Model-Based Reinforcement Learning Is Minimax-Optimal for Offline Zero-Sum Markov Games</b> <br />
-Y. Yan, G. Li, <u>Y. Chen</u>, J. Fan, 2022. <a href="publications/model_based_offline_game.pdf">[paper]</a>
+Y. Yan, G. Li, <u>Y. Chen</u>, J. Fan, accepted to <i>Operations Research</i>, 2024+. <a href="publications/model_based_offline_game.pdf">[paper]</a>
 </p>
 </li>
 <li><p><b>The Efficacy of Pessimism in Asynchronous Q-Learning</b> <br />
@@ -175,10 +175,9 @@ G. Li, <u>Y. Chen</u>, Y. Chi, Y. Gu, Y. Wei, <i>Neural Information Processing S
 </p>
 </li>
 <li><p><b>Fast Global Convergence of Natural Policy Gradient Methods with Entropy Regularization</b> <br />  S. Cen, C. Cheng, <u>Y. Chen</u>, Y. Wei, Y. Chi, <i>Operations Research</i>, vol. 70, no. 4, pp. 2563–2578, 2022. <a href="publications/NPG_reg.pdf">[paper]</a><a href="https://pubsonline.informs.org/doi/epdf/10.1287/opre.2021.2151">[OR version]</a><a href="slides/EntropyNPG_slides.pdf">[slides]</a>
-<br /> &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&#8201;&mdash;&#8201;<b>INFORMS George Nicholson award finalist</b></p>
+<br /> &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&#8201;&mdash;&#8201;<b>INFORMS George Nicholson award finalist</b>
+</p>
 </li>
-</ol>
-<ol>
 <li><p><b>Sample Complexity of Asynchronous Q-Learning: Sharper Analysis and Variance Reduction</b> <br />  G. Li, Y. Wei, Y. Chi, Y. Gu, <u>Y. Chen</u>, <i>IEEE Transactions on Information Theory</i>, vol. 68, no. 1, pp. 448-473, Jan. 2022. <a href="publications/AsynQlearning.pdf">[paper]</a><a href="slides/Async_Qlearning_slides.pdf">[slides]</a>
 <br /> &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&#8201;&mdash;&#8201;appeared in part in <a href="publications/AsynQlearning_NeurIPS.pdf">NeurIPS 2020</a>
 </p>
@@ -315,7 +314,7 @@ G. Li, <u>Y. Chen</u>, Y. Chi, Y. Gu, Y. Wei, <i>Neural Information Processing S
 </ol>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-02-09 22:04:05 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2024-02-13 21:58:28 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="Publications_year.jemdoc">source</a>)
 </div>
 </div>
