--- a/Publications_year.html
+++ b/Publications_year.html
@@ -146,7 +146,7 @@ W. Zhan*, S. Cen*, B. Huang, <u>Y. Chen</u>, J. D. Lee, Y. Chi, <i>SIAM Journal 
 </p>
 </li>
 <li><p><b>Inference for Heteroskedastic PCA with Missing Data</b> <br />
-Y. Yan, <u>Y. Chen</u>, J. Fan, 2021. <a href="publications/Denoising_PCA_inference.pdf">[paper]</a><a href="slides/PCA_Inference_short.pdf">[slides]</a>
+Y. Yan, <u>Y. Chen</u>, J. Fan, accepted to <i>Annals of Statistics</i>, 2024+. <a href="publications/Denoising_PCA_inference.pdf">[paper]</a><a href="slides/PCA_Inference_short.pdf">[slides]</a>
 </p>
 </li>
 <li><p><b>Breaking the Sample Complexity Barrier to Regret-Optimal Model-free Reinforcement Learning</b> <br />
@@ -314,7 +314,7 @@ G. Li, <u>Y. Chen</u>, Y. Chi, Y. Gu, Y. Wei, <i>Neural Information Processing S
 </ol>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-02-13 21:58:28 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2024-02-27 17:20:37 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="Publications_year.jemdoc">source</a>)
 </div>
 </div>
