--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@ Prior to this, I was a postdoc in Statistics at Stanford University from 2015 to
 <li><p>G. Li, Y. Yan, <u>Y. Chen</u>, J. Fan, <a href="publications/Reward-free-exploration.pdf">&ldquo;Minimax-optimal reward-agnostic exploration in reinforcement learning,&rdquo;</a> 2023. 
 </p>
 </li>
-<li><p>G. Li, L. Shi, <u>Y. Chen</u>, Y. Chi, Y. Wei,   <a href="publications/offline_modelbased.pdf">&ldquo;Settling the sample complexity of model-based offline reinforcement learning,&rdquo;</a> accepted to <i>Annals of Statistics</i>, 2023+.
+<li><p>G. Li, L. Shi, <u>Y. Chen</u>, Y. Chi, Y. Wei,   <a href="publications/offline_modelbased.pdf">&ldquo;Settling the sample complexity of model-based offline reinforcement learning,&rdquo;</a> accepted to <i>Annals of Statistics</i>, 2024+.
 </p>
 </li>
 <li><p>G. Li, Y. Chi, Y. Wei, <u>Y. Chen</u>, <a href="publications/Markov_games_simulator.pdf">&ldquo;Minimax-optimal multi-agent RL in Markov games with a generative model,&rdquo;</a> NeurIPS 2022 <b>(selected as oral)</b>. 
@@ -175,7 +175,7 @@ Prior to this, I was a postdoc in Statistics at Stanford University from 2015 to
 <li><p>Y. Zhou, <u>Y. Chen</u>, <a href="publications/deflated_heteroPCA.pdf">&ldquo;Deflated HeteroPCA: Overcoming the curse of ill-conditioning in heteroskedastic PCA,&rdquo;</a> 2023. <a href="publications/deflated_heteroPCA.pdf">[ArXiv]</a><a href="slides/Deflated_HeteroPCA_slides.pdf">[slides]</a>
 </p>
 </li>
-<li><p>Y. Yan, <u>Y. Chen</u>, J. Fan, <a href="publications/Denoising_PCA_inference.pdf">&ldquo;Inference for heteroskedastic PCA with missing data,&rdquo;</a> 2021. <a href="publications/Denoising_PCA_inference.pdf">[ArXiv]</a><a href="slides/PCA_Inference_short.pdf">[slides]</a>
+<li><p>Y. Yan, <u>Y. Chen</u>, J. Fan, <a href="publications/Denoising_PCA_inference.pdf">&ldquo;Inference for heteroskedastic PCA with missing data,&rdquo;</a> accepted to <i>Annals of Statistics</i>, 2024+. <a href="publications/Denoising_PCA_inference.pdf">[ArXiv]</a><a href="slides/PCA_Inference_short.pdf">[slides]</a>
 
 
 
@@ -196,7 +196,7 @@ Prior to this, I was a postdoc in Statistics at Stanford University from 2015 to
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-02-13 21:58:27 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2024-02-27 17:20:36 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="index.jemdoc">source</a>)
 </div>
 </div>
