--- a/Publications_year.html
+++ b/Publications_year.html
@@ -51,6 +51,12 @@
 </p>
 </td></tr></table>
 
+<h2>2024</h2>
+<ol>
+<li><p><b>Accelerating Convergence of Score-Based Diffusion Models, Provably</b> <br />
+G. Li*, Y. Huang*, Y. Wei, Y. Chi, <u>Y. Chen</u>, 2023 (*=equal contributions). <a href="publications/DiffusionSGM.pdf">[paper]</a></p>
+</li>
+</ol>
 <h2>2023</h2>
 <ol>
 <li><p><b>Optimal Multi-Distribution Learning</b> <br />
@@ -314,7 +320,7 @@ G. Li, <u>Y. Chen</u>, Y. Chi, Y. Gu, Y. Wei, <i>Neural Information Processing S
 </ol>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-02-27 17:20:37 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2024-03-06 14:10:42 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="Publications_year.jemdoc">source</a>)
 </div>
 </div>
