--- a/index.html
+++ b/index.html
@@ -100,6 +100,9 @@ Prior to this, I was a postdoc in Statistics at Stanford University from 2015 to
 <li><p><b>Machine learning theory</b>
 </p>
 <ul>
+<li><p>G. Li*, Y. Huang*, Y. Wei, Y. Chi, <u>Y. Chen</u>, <a href="publications/AccDiffusion.pdf">&ldquo;Accelerating convergence of score-based diffusion models, provably,&rdquo;</a> 2024 (*=equal contributions).
+</p>
+</li>
 <li><p>Z. Zhang, W. Zhan, <u>Y. Chen</u>, S. S. Du, J. D. Lee, <a href="https://arxiv.org/abs/2312.05134">&ldquo;Optimal multi-distribution learning,&rdquo;</a> 2023.
 </p>
 </li>
@@ -196,7 +199,7 @@ Prior to this, I was a postdoc in Statistics at Stanford University from 2015 to
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-02-27 17:20:36 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2024-03-06 14:10:42 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="index.jemdoc">source</a>)
 </div>
 </div>
