--- a/Publications_year.html
+++ b/Publications_year.html
@@ -54,7 +54,7 @@
 <h2>2024</h2>
 <ol>
 <li><p><b>Accelerating Convergence of Score-Based Diffusion Models, Provably</b> <br />
-G. Li*, Y. Huang*, Y. Wei, Y. Chi, <u>Y. Chen</u>, 2023 (*=equal contributions). <a href="publications/AccDiffusion.pdf">[paper]</a></p>
+G. Li*, Y. Huang*, T. Efimov, Y. Wei, Y. Chi, <u>Y. Chen</u>, 2023 (*=equal contributions). <a href="publications/AccDiffusion.pdf">[paper]</a></p>
 </li>
 </ol>
 <h2>2023</h2>
@@ -320,7 +320,7 @@ G. Li, <u>Y. Chen</u>, Y. Chi, Y. Gu, Y. Wei, <i>Neural Information Processing S
 </ol>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-03-06 14:53:49 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2024-03-06 23:19:32 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="Publications_year.jemdoc">source</a>)
 </div>
 </div>
