--- a/Group.html
+++ b/Group.html
@@ -35,7 +35,7 @@
 <h1>PhD students and postdocs </h1>
 <h2>Current &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp</h2>
 <ul>
-<li><p><a href="https://jagterberg.github.io/">Joshua Agterberg</a> (Postdoc, co-advised with Rene Vidal; Incoming Faculty, Department of Statistics, University of Illinois Urbana-Champaign)
+<li><p><a href="https://jagterberg.github.io/">Joshua Agterberg</a> (Postdoc, co-advised with Rene Vidal; Incoming Faculty, University of Illinois Urbana-Champaign)
 </p>
 </li>
 <li><p><a href="https://scholar.google.com/citations?user=K59VclwAAAAJ&amp;hl=en">Hong Hu</a> (Postdoc, co-advised with Yuting Wei)</p>
@@ -49,29 +49,35 @@
 </li>
 <li><p><a href="https://scholar.google.com/citations?user=un0eGzEAAAAJ&amp;hl=en">Zihan Zhang</a> (Postdoc, co-advised with  Simon Shaolei Du and Jason Lee) </p>
 </li>
-<li><p><a href="https://yuchenzhou-stat.github.io/">Yuchen Zhou</a> (Postdoc)</p>
+<li><p><a href="https://yuchenzhou-stat.github.io/">Yuchen Zhou</a> (Postdoc; Incoming Faculty, University of Illinois Urbana-Champaign)</p>
 </li>
 </ul>
 <h2>Alumni </h2>
 <ul>
-<li><p><a href="https://cxcai.github.io/">Changxiao Cai</a> (Faculty, Department of Industrial and Operations Engineering, University of Michigan-Ann Arbor)</p>
+<li><p><a href="https://cxcai.github.io/">Changxiao Cai</a> (Faculty, University of Michigan-Ann Arbor)
+</p>
 </li>
 <li><p>Yanxi Chen (First Job: Alibaba DAMO Academy) </p>
 </li>
-<li><p><a href="https://ligen12.github.io/">Gen Li</a> (Faculty, Department of Statistics, Chinese University of Hong Kong)</p>
+<li><p><a href="https://ligen12.github.io/">Gen Li</a> (Faculty, Chinese University of Hong Kong)
+</p>
 </li>
-<li><p><a href="https://congma1028.github.io/">Cong Ma</a> (Faculty, Department of Statistics, University of Chicago)</p>
+<li><p><a href="https://congma1028.github.io/">Cong Ma</a> (Faculty, University of Chicago)
+</p>
 </li>
-<li><p><a href="https://yulingy.github.io/">Yuling Yan</a> (Postdoc at MIT; Incoming Faculty, Department of Statistics, University of Wisconsin–Madison)</p>
+<li><p><a href="https://yulingy.github.io/">Yuling Yan</a> (Postdoc at MIT; Incoming Faculty, University of Wisconsin–Madison)
+</p>
 </li>
-<li><p><a href="https://sites.google.com/site/pyangece/">Pengkun Yang</a>  (Faculty, Center for Statistical Science, Tsinghua University)</p>
+<li><p><a href="https://sites.google.com/site/pyangece/">Pengkun Yang</a>  (Faculty, Tsinghua University)
+</p>
 </li>
-<li><p><a href="https://live-sil-ece-ucsb-edu-v01.pantheonsite.io/">Qian Yu</a> (Faculty, Department of Electrical and Computer Engineering, University of California, Santa Barbara) </p>
+<li><p><a href="https://live-sil-ece-ucsb-edu-v01.pantheonsite.io/">Qian Yu</a> (Faculty, University of California, Santa Barbara) 
+</p>
 </li>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-03-06 23:20:37 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2024-03-07 15:02:10 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="Group.jemdoc">source</a>)
 </div>
 </div>
