--- a/index.html
+++ b/index.html
@@ -65,19 +65,23 @@ Prior to this, I was a postdoc in Statistics at Stanford University from 2015 to
  received the <a href="https://www.siam.org/prizes-recognition/activity-group-prizes/detail/siag-imaging-science-best-paper-prize"> SIAM Activity Group on Imaging Science Best Paper Prize</a>. </li>
 </ul>
 <ul>
+    <li><a href="https://yuchenzhou-stat.github.io/"> Yuchen Zhou</a> will join University of Illinois Urbana-Champaign
+ as an Assistant Professor in Fall 2024. Congrats, Yuchen! </li>
+</ul>
+<ul>
     <li><a href="https://yulingy.github.io/"> Yuling Yan</a> received the IMS Lawrence D. Brown Ph. D. Student Award and the ICCM Best Thesis Award (silver medal). Congrats, Yuling! </li>
 </ul>
 <ul>
-    <li><a href="https://cxcai.github.io/"> Changxiao Cai</a> has joined University of Michigan-Ann Arbor as an Assistant Professor of Industrial and Operations Engineering. Congrats, Changxiao! </li>
+    <li><a href="https://cxcai.github.io/"> Changxiao Cai</a> has joined University of Michigan-Ann Arbor as an Assistant Professor. Congrats, Changxiao! </li>
 </ul>
 <ul>
-    <li><a href="https://ligen12.github.io/"> Gen Li</a> has joined Chinese University of Hong Kong as an Assistant Professor of Statistics. Congrats, Gen! </li>
+    <li><a href="https://ligen12.github.io/"> Gen Li</a> has joined Chinese University of Hong Kong as an Assistant Professor. Congrats, Gen! </li>
 </ul>
 <ul>
-    <li><a href="https://yulingy.github.io/"> Yuling Yan</a> will join University of Wisconsin-Madison as an Assistant Professor of Statistics in Fall 2024, after being a Norbert Wiener postdoc at MIT (advised by P. Rigollet and M. Wainwright). Congrats, Yuling! </li>
+    <li><a href="https://yulingy.github.io/"> Yuling Yan</a> will join University of Wisconsin-Madison as an Assistant Professor in Fall 2024, after being a Norbert Wiener postdoc at MIT (advised by P. Rigollet and M. Wainwright). Congrats, Yuling! </li>
 </ul>
 <ul>
-    <li><a href="https://live-sil-ece-ucsb-edu-v01.pantheonsite.io/"> Qian Yu</a> has joined UCSB as an Assistant Professor of Electrical and Computer Engineering. Congrats, Qian! </li>
+    <li><a href="https://live-sil-ece-ucsb-edu-v01.pantheonsite.io/"> Qian Yu</a> has joined UCSB as an Assistant Professor. Congrats, Qian! </li>
 </ul>
 <ul>
     <li>Our new monograph <a href="publications/SpectralMethods.pdf"> "Spectral Methods for Data Science: A Statistical Perspective" </a> is published in <a href="https://www.nowpublishers.com/article/Details/MAL-079"><i> Foundations and Trends in Machine Learning</i></a>. See <a href="slides/spectral_method_slides.pdf"> slides </a> for PKU summer school on theoretical statistics.  </li>
@@ -199,7 +203,7 @@ Prior to this, I was a postdoc in Statistics at Stanford University from 2015 to
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-03-06 23:20:37 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2024-03-07 15:02:10 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="index.jemdoc">source</a>)
 </div>
 </div>
