--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@ Prior to this, I was a postdoc in Statistics at Stanford University from 2015 to
  received the <a href="https://www.siam.org/prizes-recognition/activity-group-prizes/detail/siag-imaging-science-best-paper-prize"> SIAM Activity Group on Imaging Science Best Paper Prize</a>. </li>
 </ul>
 <ul>
-    <li><a href="https://yuchenzhou-stat.github.io/"> Yuchen Zhou</a> will join University of Illinois Urbana-Champaign
+    <li><a href="https://yuchenzhou-stat.github.io/"> Yuchen Zhou</a> will join UIUC 
  as an Assistant Professor in Fall 2024. Congrats, Yuchen! </li>
 </ul>
 <ul>
@@ -203,7 +203,7 @@ Prior to this, I was a postdoc in Statistics at Stanford University from 2015 to
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-03-07 15:02:10 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2024-03-07 15:12:31 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="index.jemdoc">source</a>)
 </div>
 </div>
