--- a/Publications_year.html
+++ b/Publications_year.html
@@ -113,7 +113,7 @@ H. Li, D. Serrano, T. Guillod, S. Wang, E. Dogariu, A. Nadler, M. Luo, V. Bansal
 <h2>2022</h2>
 <ol>
 <li><p><b>Settling the Sample Complexity of Model-Based Offline Reinforcement Learning</b> <br />
-G. Li, L. Shi, <u>Y. Chen</u>,  Y. Chi, Y. Wei,  accepted to <i>Annals of Statistics</i>,  2024+. <a href="publications/offline_modelbased.pdf">[paper]</a>
+G. Li, L. Shi, <u>Y. Chen</u>,  Y. Chi, Y. Wei,  <i>Annals of Statistics</i>,  vol. 52, no. 1, pp. 233-260, 2024. <a href="publications/offline_modelbased.pdf">[paper]</a>
 </p>
 </li>
 <li><p><b>Minimax-Optimal Multi-Agent RL in Markov Games With a Generative Model</b> <br />
@@ -320,7 +320,7 @@ G. Li, <u>Y. Chen</u>, Y. Chi, Y. Gu, Y. Wei, <i>Neural Information Processing S
 </ol>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-03-07 15:12:31 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2024-03-08 08:20:57 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="Publications_year.jemdoc">source</a>)
 </div>
 </div>
