--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@ Prior to this, I was a postdoc in Statistics at Stanford University from 2015 to
 <li><p>G. Li, Y. Yan, <u>Y. Chen</u>, J. Fan, <a href="publications/Reward-free-exploration.pdf">&ldquo;Minimax-optimal reward-agnostic exploration in reinforcement learning,&rdquo;</a> 2023. 
 </p>
 </li>
-<li><p>G. Li, L. Shi, <u>Y. Chen</u>, Y. Chi, Y. Wei,   <a href="publications/offline_modelbased.pdf">&ldquo;Settling the sample complexity of model-based offline reinforcement learning,&rdquo;</a> accepted to <i>Annals of Statistics</i>, 2024+.
+<li><p>G. Li, L. Shi, <u>Y. Chen</u>, Y. Chi, Y. Wei,   <a href="publications/offline_modelbased.pdf">&ldquo;Settling the sample complexity of model-based offline reinforcement learning,&rdquo;</a> <i>Annals of Statistics</i>, vol. 52, no. 1, pp. 233-260, 2024.
 </p>
 </li>
 <li><p>G. Li, Y. Chi, Y. Wei, <u>Y. Chen</u>, <a href="publications/Markov_games_simulator.pdf">&ldquo;Minimax-optimal multi-agent RL in Markov games with a generative model,&rdquo;</a> NeurIPS 2022 <b>(selected as oral)</b>. 
@@ -203,7 +203,7 @@ Prior to this, I was a postdoc in Statistics at Stanford University from 2015 to
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-03-07 15:12:31 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2024-03-08 08:20:57 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="index.jemdoc">source</a>)
 </div>
 </div>
