--- a/InvitedTalk.html
+++ b/InvitedTalk.html
@@ -262,7 +262,7 @@
 </ol>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-03-08 14:02:41 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2024-03-14 14:22:30 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="InvitedTalk.jemdoc">source</a>)
 </div>
 </div>
