--- a/Workshops.html
+++ b/Workshops.html
@@ -44,7 +44,7 @@
 </ol>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-03-08 14:02:42 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2024-03-14 14:22:30 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="Workshops.jemdoc">source</a>)
 </div>
 </div>
