--- a/index.html
+++ b/index.html
@@ -119,13 +119,13 @@ Prior to this, I was a postdoc in Statistics at Stanford University from 2015 to
 <li><p>G. Li, Y. Yan, <u>Y. Chen</u>, J. Fan, <a href="publications/Reward-free-exploration.pdf">&ldquo;Minimax-optimal reward-agnostic exploration in reinforcement learning,&rdquo;</a> 2023. 
 </p>
 </li>
-<li><p>G. Li, L. Shi, <u>Y. Chen</u>, Y. Chi, Y. Wei,   <a href="publications/offline_modelbased.pdf">&ldquo;Settling the sample complexity of model-based offline reinforcement learning,&rdquo;</a> <i>Annals of Statistics</i>, vol. 52, no. 1, pp. 233-260, 2024.
+<li><p>G. Li, L. Shi, <u>Y. Chen</u>, Y. Chi, Y. Wei,   <a href="publications/offline_modelbased.pdf">&ldquo;Settling the sample complexity of model-based offline reinforcement learning,&rdquo;</a> <i>Annals of Statistics</i>, vol. 52, no. 1, pp. 233-260, 2024. <a href="publications/offline_modelbased.pdf">[paper]</a><a href="https://projecteuclid.org/journals/annals-of-statistics/volume-52/issue-1/Settling-the-sample-complexity-of-model-based-offline-reinforcement-learning/10.1214/23-AOS2342.full">[AoS version]</a>
 </p>
 </li>
 <li><p>G. Li, Y. Chi, Y. Wei, <u>Y. Chen</u>, <a href="publications/Markov_games_simulator.pdf">&ldquo;Minimax-optimal multi-agent RL in Markov games with a generative model,&rdquo;</a> NeurIPS 2022 <b>(selected as oral)</b>. 
 </p>
 </li>
-<li><p>G. Li, Y. Wei, Y. Chi,  <u>Y. Chen</u>,  <a href="publications/SoftmaxPG_LB.pdf">&ldquo;Softmax policy gradient methods can take exponential time to converge,&rdquo;</a> <i>Mathematical Programming</i>, vol. 201, pp. 707-802, 2023 (appeared in part to COLT 2021). <a href="publications/SoftmaxPG_LB.pdf">[ArXiv]</a><a href="https://link.springer.com/article/10.1007/s10107-022-01920-6">[MP version]</a><a href="slides/Softmax_Lower_Bound_slides.pdf">[slides]</a>
+<li><p>G. Li, Y. Wei, Y. Chi,  <u>Y. Chen</u>,  <a href="publications/SoftmaxPG_LB.pdf">&ldquo;Softmax policy gradient methods can take exponential time to converge,&rdquo;</a> <i>Mathematical Programming</i>, vol. 201, pp. 707-802, 2023 (appeared in part to COLT 2021). <a href="publications/SoftmaxPG_LB.pdf">[paper]</a><a href="https://link.springer.com/article/10.1007/s10107-022-01920-6">[MP version]</a><a href="slides/Softmax_Lower_Bound_slides.pdf">[slides]</a>
 </p>
 </li>
 <li><p>G. Li, C. Cai, <u>Y. Chen</u>, Y. Wei, Y. Chi, <a href="publications/SyncQlearning.pdf">&ldquo;Is Q-Learning minimax optimal? A tight sample complexity analysis,&rdquo;</a> <i>Operations Research</i>, vol. 72, no. 1, pp. 203-221, 2024 (appeared in part to ICML 2021).  <a href="publications/SyncQlearning.pdf">[paper]</a><a href="https://pubsonline.informs.org/doi/epdf/10.1287/opre.2023.2450">[OR version]</a>
@@ -203,7 +203,7 @@ Prior to this, I was a postdoc in Statistics at Stanford University from 2015 to
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-03-08 14:02:41 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2024-03-14 14:22:29 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="index.jemdoc">source</a>)
 </div>
 </div>
