--- a/Publications_year.html
+++ b/Publications_year.html
@@ -60,7 +60,7 @@ G. Li*, Y. Huang*, T. Efimov, Y. Wei, Y. Chi, <u>Y. Chen</u>, 2023 (*=equal cont
 <h2>2023</h2>
 <ol>
 <li><p><b>Optimal Multi-Distribution Learning</b> <br />
-Z. Zhang, W. Zhan, <u>Y. Chen</u>, S. S. Du,  J. D. Lee, 2023. <a href="https://arxiv.org/abs/2312.05134">[paper]</a>
+Z. Zhang, W. Zhan, <u>Y. Chen</u>, S. S. Du,  J. D. Lee, 2023. <a href="publications/MDL.pdf">[paper]</a>
 </p>
 </li>
 <li><p><b>Heteroskedastic Tensor Clustering</b> <br />
@@ -320,7 +320,7 @@ G. Li, <u>Y. Chen</u>, Y. Chi, Y. Gu, Y. Wei, <i>Neural Information Processing S
 </ol>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-03-14 14:22:30 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2024-03-19 14:33:44 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="Publications_year.jemdoc">source</a>)
 </div>
 </div>
