--- a/Publications_year.html
+++ b/Publications_year.html
@@ -54,7 +54,11 @@
 <h2>2024</h2>
 <ol>
 <li><p><b>Accelerating Convergence of Score-Based Diffusion Models, Provably</b> <br />
-G. Li*, Y. Huang*, T. Efimov, Y. Wei, Y. Chi, <u>Y. Chen</u>, 2023 (*=equal contributions). <a href="publications/AccDiffusion.pdf">[paper]</a></p>
+G. Li*, Y. Huang*, T. Efimov, Y. Wei, Y. Chi, <u>Y. Chen</u>, 2024 (*=equal contributions). <a href="publications/AccDiffusion.pdf">[paper]</a>
+</p>
+</li>
+<li><p><b>Horizon-Free Regret for Linear Markov Decision Processes</b> <br />
+Zihan Zhang, Jason D. Lee, <u>Y. Chen</u>, Simon S. Du, <i>International Conference on Learning Representations (ICLR)</i>, 2024. <a href="https://arxiv.org/abs/2403.10738">[paper]</a></p>
 </li>
 </ol>
 <h2>2023</h2>
@@ -320,7 +324,7 @@ G. Li, <u>Y. Chen</u>, Y. Chi, Y. Gu, Y. Wei, <i>Neural Information Processing S
 </ol>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-03-19 14:33:44 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2024-03-19 16:44:28 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="Publications_year.jemdoc">source</a>)
 </div>
 </div>
