--- a/Publications_year.html
+++ b/Publications_year.html
@@ -64,7 +64,7 @@ Zihan Zhang, Jason D. Lee, <u>Y. Chen</u>, Simon S. Du, <i>International Confere
 <h2>2023</h2>
 <ol>
 <li><p><b>Optimal Multi-Distribution Learning</b> <br />
-Z. Zhang, W. Zhan, <u>Y. Chen</u>, S. S. Du,  J. D. Lee, 2023. <a href="publications/MDL.pdf">[paper]</a>
+Z. Zhang, W. Zhan, <u>Y. Chen</u>, S. S. Du,  J. D. Lee, 2023. <a href="publications/MDL.pdf">[paper]</a><a href="slides/MDL_slides.pdf">[slides]</a>
 </p>
 </li>
 <li><p><b>Heteroskedastic Tensor Clustering</b> <br />
@@ -324,7 +324,7 @@ G. Li, <u>Y. Chen</u>, Y. Chi, Y. Gu, Y. Wei, <i>Neural Information Processing S
 </ol>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-03-19 16:44:28 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2024-03-28 14:05:11 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="Publications_year.jemdoc">source</a>)
 </div>
 </div>
